// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`facebook ads tab when there is no stuff in the archive when it is loading renders correctly 1`] = `
<h3>
  Loading archive.
</h3>
`;

exports[`facebook ads tab when there is no stuff in the archive when it is simply empty renders correctly 1`] = `
<h3>
  You have nothing in your archive.
</h3>
`;

exports[`facebook ads tab when there is stuff in the archive renders correctly 1`] = `
Array [
  <div
    className="mb-2"
  >
    <div>
      This is an archive of the data this extension has collected from your social feeds.
    </div>
    <div
      className="small"
    >
      You have 
      5 items
       in your archive, collected since 
      <span
        className="as-date"
      >
        02/02/2020
      </span>
    </div>
  </div>,
  <div
    className="btn-group"
    role="group"
  >
    <button
      className="btn border align-items-center btn-light"
      onClick={[Function]}
      type="button"
    >
      Facebook Ads
      <span
        className="badge badge-primary ml-2"
      >
        1
      </span>
    </button>
    <button
      className="btn border align-items-center btn-secondary"
      onClick={[Function]}
      type="button"
    >
      YouTube Videos
      <span
        className="badge badge-primary ml-2"
      >
        1
      </span>
    </button>
  </div>,
  <div
    id="archive-list"
  >
    Archive List stuff here
  </div>,
]
`;

exports[`youtube video tab when there is stuff in the archive renders correctly 1`] = `
Array [
  <div
    className="mb-2"
  >
    <div>
      This is an archive of the data this extension has collected from your social feeds.
    </div>
    <div
      className="small"
    >
      You have 
      5 items
       in your archive, collected since 
      <span
        className="as-date"
      >
        02/02/2020
      </span>
    </div>
  </div>,
  <div
    className="btn-group"
    role="group"
  >
    <button
      className="btn border align-items-center btn-secondary"
      onClick={[Function]}
      type="button"
    >
      Facebook Ads
      <span
        className="badge badge-primary ml-2"
      >
        1
      </span>
    </button>
    <button
      className="btn border align-items-center btn-light"
      onClick={[Function]}
      type="button"
    >
      YouTube Videos
      <span
        className="badge badge-primary ml-2"
      >
        1
      </span>
    </button>
  </div>,
  <div
    id="archive-list"
  >
    Archive List stuff here
  </div>,
]
`;
